--- a/src/app/auth/register-player/register-player.component.html
+++ b/src/app/auth/register-player/register-player.component.html
@@ -77,10 +77,8 @@
     </div>
 
     <div class="form-group checkbox-group">
-      <label for="lookingForTeam">
-        Actualmente buscando equipo
-        <input type="checkbox" id="lookingForTeam" formControlName="lookingForTeam">
-      </label>
+      <label for="lookingForTeam">Actualmente buscando equipo</label>
+      <input type="checkbox" id="lookingForTeam" formControlName="lookingForTeam" class="checkbox">
     </div>
 
     <div class="form-group">
