--- a/src/app/features/shared-styles.scss
+++ b/src/app/features/shared-styles.scss
@@ -188,6 +188,18 @@
           color: #f2ac29;
         }
 
+        &:first-child .menu-icon {
+          background-image: url('/profile.png');
+          height: 20px;
+          width: 20px;
+        }
+
+        &:last-child .menu-icon {
+          background-image: url('/logout.png');
+          height: 20px;
+          width: 20px;
+        }
+
         &:last-child {
           color: #e74c3c;
 
@@ -345,6 +357,7 @@
   from {
     opacity: 0;
   }
+
   to {
     opacity: 1;
   }
@@ -355,6 +368,7 @@
     transform: translateY(20px);
     opacity: 0;
   }
+
   to {
     transform: translateY(0);
     opacity: 1;
@@ -365,6 +379,7 @@
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(360deg);
   }
